tests/baselines/reference/castExpressionParentheses(strict=true).errors.txt
castExpressionParentheses.ts(1,13): error TS7005: Variable 'a' implicitly has an 'any' type.
castExpressionParentheses.ts(20,12): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
castExpressionParentheses.ts(32,13): error TS7005: Variable 'A' implicitly has an 'any' type.


==== castExpressionParentheses.ts (3 errors) ====
    declare var a;
                ~
!!! error TS7005: Variable 'a' implicitly has an 'any' type.
    
    // parentheses should be omitted
    // literals
    (<any>{a:0});  
    (<any>[1,3,]); 
    (<any>"string"); 
    (<any>23.0); 
    (<any>1); 
    (<any>1.);
    (<any>1.0);
    (<any>12e+34);
    (<any>0xff);
    (<any>/regexp/g); 
    (<any>false); 
    (<any>true); 
    (<any>null); 
    // names and dotted names
    (<any>this); 
    (<any>this.x); 
               ~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
    (<any>(<any>a).x);
    (<any><any>a);
    (<any>a[0]);
    (<any>a.b["0"]);
    (<any>a()).x;
    (<any>1).foo;
    (<any>1.).foo;
    (<any>1.0).foo;
    (<any>12e+34).foo;
    (<any>0xff).foo;
    
    declare var A;
                ~
!!! error TS7005: Variable 'A' implicitly has an 'any' type.
    
    // should keep the parentheses in emit
    (<any>(1.0)); 
    (<any>new A).foo; 
    (<any>typeof A).x; 
    (<any>-A).x; 
    new (<any>A());
    (<Tany>()=> {})();
    (<any>function foo() { })();
    (<any><number><any>-A).x; 
    
    // nested cast, should keep one pair of parenthese
    (<any><number>(<any>-A)).x; 
    
    // nested parenthesized expression, should keep one pair of parenthese
    (<any>(A)) 
    
    